# get_block_transfer_filter

./: Cargo.toml  README.md  curl_get_block.sh  run.sh
src/: main.rs
