[package]
name = "get_block_transfer_filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
axum = "0.7.4"
clap = { version = "4.4.8", features = ["derive"] }
#solana-client = "1.18.2"
#solana-sdk = "1.18.2"
tokio = { version = "1", features = ["full"] }
ureq = {version = "2.8.0", features = ["json"]}
